Added new API getUserConnections to get followers/ followings list
